--- a/app/views/users/favor_followings.html.erb
+++ b/app/views/users/favor_followings.html.erb
@@ -17,6 +17,7 @@
       <li class="<%= 'active' if current_page?(followers_user_path(@user)) %>"><%= link_to followers_user_path(@user) do %>Followers <span class="badge"><%= @count_followers %></span><% end %></li>
       <li class="<%= 'active' if current_page?(favor_followings_user_path(@user)) %>"><%= link_to favor_followings_user_path(@user) do %>Favorites <span class="badge"><%= @count_favor_followings %></span><% end %></li>
     </ul>
-    <%= render 'users', users: @followings %>
+    
+    <%= render 'microposts/microposts', microposts: @favor_followings %>
   </div>
 </div>
